ui update, performance optimizations